# LuokeCollection

./: .gitignore  Makefile  README.md  build_utils.py  errorlog.txt  index.py  index.spec  index.spec1  pull_request_template.md  pyproject.toml
.github/workflows/: ci.yml
LuokeCollection/: index.py
LuokeCollection/main/: __init__.py  app.py  element_table.py  scene.py  scene_factory.py  utils.py
LuokeCollection/main/animation/: mixin.py
LuokeCollection/main/app/: App.py  __init__.py
LuokeCollection/main/battle/: action_solver.py  animator.py  battle_animation.py  battle_pet.py  battle_system.py  pet_status.py  rng.py  skill_dictionary.py  skill_effect.py  skill_outcome.py
LuokeCollection/main/components/: background.py  background_music.py  button.py  container.py  slider.py  sprite.py  text.py
LuokeCollection/main/controller/: __init__.py
LuokeCollection/main/controllers/: collection_controller.py  controller.py  init_controller.py  select_rect_controller.py
LuokeCollection/main/model/: background_music.py  data.json  model.py  sound.py
LuokeCollection/main/network/: client.py  package.py  server.py
LuokeCollection/main/scene/: battle_prep_scene.py  battle_scene.py  collection_scene.py  init_scene.py  pet_position_select_scene.py  scene.py  select_rect_scene.py  splash_scene.py  training_scene.py
LuokeCollection/settings/: dev.py
luoke_collection_web/: package-lock.json  package.json
luoke_collection_web/public/: index.html
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.css  App.tsx
(+543 files in other folders)
