[tool.poetry]
name = "luokecollection"
version = "0.2.0"
description = ""
authors = ["Ruoqi Huang <huangruoqi374@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.6.0"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
